test_files/netlist_footer_cmp/valid/valid_case_06_b.net
V1 VCC 0 15
R1 VCC C 2.2k
R2 VCC B 120k
R3 B 0 18k
Q1 C B 0 0 NPN
.tf V(OUT) V1
* comment after analysis
.backanno
.end
